src/main/java/com/example/demo/entity/error/CommonError.java
package com.example.demo.entity.error;

public enum CommonError {
	ID_NOT_EXISTS, UNAUTHORIZED_USER, SIGNATURE_NOT_PENDING;
}
